force-app/main/default/objects/Field_Trip__Field_Analysis__c/fields/Field_Trip__Field_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Field_Created_Date__c</fullName>
    <description>Not functional in current version... reserved for use in future release.</description>
    <label>Field Created Date</label>
    <type>Date</type>
</CustomField>