force-app/main/default/objects/Field_Trip__Field_Analysis__c/fields/Field_Trip__Populated_On_Percent__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Populated_On_Percent__c</fullName>
    <formula>VALUE(
IF(Field_Trip__Object_Analysis__r.Field_Trip__Records__c = 0, "", TEXT(Field_Trip__Populated_On__c /  Field_Trip__Object_Analysis__r.Field_Trip__Records__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>