force-app/main/default/objects/Field_Trip__Field_Analysis__c/fields/Field_Trip__Total_Tally__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Total_Tally__c</fullName>
    <label>Total Tally (Temporary)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>